styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


body {
    font-size: 1em;
    font-family: "NanumGothic";
    color: #2d3436;
    line-height: 1.5em;
}


/* Mobile Styling */
@media screen and (max-width: 470px) {
    nav > h3 {
        display: none;
    }
}


header {
    display: flex;
    height: auto;
}

nav {
    display: flex;
    justify-content: space-between;

    position: fixed;
    bottom: 0;
    overflow: hidden;

    width: 100%;
    height: auto;

    background-color: #2d3436;

    padding: 10px 20px 10px 20px;
}


a {
    color: #00b894;
    text-decoration: none;
}

a:visited {
    color: #00b894;
}

a:hover {
    color: #55efc4;
}


.page {
    display: flex;
    flex-wrap: wrap;
    padding: 0 30px;
}


h1, h2, h3, p, li, a, img, figcaption {
    margin-bottom: 0.5em;
}

.container > h1 {
    margin-top: 0.5em;
}

ul > li {
    list-style: none;
}

.container{
    width: 100%;
    margin-bottom: 1.5em;
}


figure {
    margin: 10px 0 10px 0;
}

img {
    width: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;

    padding: 5px;
}

figcaption {
    font-size: 0.9em;
    
    text-align: center;
}

.demo {
    display: block;
}

.container:last-of-type > p:last-of-type,
.contact,
.under-construction,
.final {
    margin-bottom: 5em;
}



/* Nav Styles */

nav > a {
    font-size: 1em;
}


/* About Styles */

.contact > ul > li {
    list-style: none;
    text-align: center;
    margin-bottom: 1em;
}

